--- a/index.html
+++ b/index.html
@@ -60,15 +60,7 @@
 
  <h1><p class ="impression"style ="color: green;font-weight:bold;font-size:30px;background-color:blue;">祝愿尚硅谷的学子，学业有成！教员工作顺利！半载风风雨雨，一生无怨无悔 ------21090311糟老头子
 </p></h1>
- 
- 
- 
- <p class ="impression"style ="color: yellow;font-weight:bold;font-size:30px;background-color:green;">刚才一对学生模样的情侣在XX公园问我喜来登酒店怎么走，我毫不犹豫的指向了新华书店的方向。希望他们能在知识的海洋里找回迷失的自己。
-----20190105 bigdata wangxiaoxun
-</p>
-	  
- 
- 
+
 
 	  <p class ="impression" style="color: #0099FF;font-size: 18px;font-family: 楷体">
 			  很久很久之前学会留言的时候是QQ留言<br>
@@ -1589,4 +1581,5 @@ just do it ,多敲代码，多学英语---王光光
 <p class="impression" style="color:blue" > 夫天降将大任于斯人也，必先去其鼠标，毁其键盘，砸其主机！ --- mc-16-1201 2017年4月</p>
 <p class="impression" style="color:blue" > 五一放假，大家都想好去哪儿玩了吗？--^_^</p>
 <p class="impression" style="color:yellow" >世上长得越好看的女人，越是会
-<p class="impression" style="color:green" >我要更优秀 ---lianxiaomo
+        <p class="impression" style="color:green" >我要更优秀 ---lianxiaoma</p>
+        <p class="impression" style="color: blue"> 感谢尚硅谷的视频，让我找到工作
